<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="top|center"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        tools:text="Been There"></TextView>
<TableLayout
android:id="@+id/TableLayout01"
    android:stretchColumns="*"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<TableRow
android:id="@+id/TableRow01"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/ImageView2_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:contentDescription="@string/imageview2_left"
        android:src="@drawable/f1"></ImageView>

    <ImageView
        android:id="@+id/ImageView2_Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:contentDescription="@string/imageview2_right"
        android:src="@drawable/f1_2"></ImageView>
    </TableRow>
<TableRow
android:id="@+id/TableRow02"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/ImageView3_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:contentDescription="@string/imageview3_left"
        android:src="@drawable/motogp"></ImageView>

    <ImageView
        android:id="@+id/ImageView3_Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:contentDescription="@string/imageview3_right"
        android:src="@drawable/motogp2"></ImageView>
    </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"
        tools:text="Done That!"></TextView>
<TextView
android:id="@+id/TextViewBottomVersion"
    android:text="@string/app_version_info"
    android:textSize="@dimen/version_size"
    android:textColor="@color/version_color"
    android:background="@color/version_bkgrd"
    android:layout_height="match_parent"
    android:lineSpacingExtra="@dimen/version_spacing"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center"></TextView>
    </LinearLayout>