<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meta"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="73dp">

        <TextView
            android:id="@+id/Title_Menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginLeft="131dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="132dp"
            android:layout_marginRight="132dp"
            android:layout_marginBottom="27dp"
            android:gravity="center"
            android:text="@string/title_menu"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="77dp"
            android:layout_height="47dp"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/f1_logo"
            app:layout_constraintEnd_toStartOf="@+id/Title_Menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/f1_logo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="66dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/moto_logo"
            app:layout_constraintStart_toEndOf="@+id/Title_Menu"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/motogp_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/ListView_Menu"
        android:layout_width="fill_parent"
        android:layout_height="528dp"
        android:layout_gravity="center"
        android:divider="@android:drawable/arrow_down_float"
        android:listSelector="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/imagemenu"
        android:src="@drawable/bandera"
        app:srcCompat="@drawable/bandera"
        tools:srcCompat="@drawable/bandera" />

</LinearLayout>